Fix: background music autoplay, set grain default off, update EventsSection subtitle, and improve accessibility warnings

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
     <!-- Favicon with performance attributes -->
-    <link rel="icon" href="/piratagelogo.ico" sizes="any" />
+    <link rel="icon" href="/piratagelogo.webp" sizes="any" />
     
     <title>Piratage AUC</title>
   </head>
