feat: integrate add-to-calendar-button, add event template ID, update calendar sync description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Favicon with performance attributes -->
     <link rel="icon" href="/piratagelogo.webp" sizes="any" />
     
+    <!-- AddEvent.com Add-to-Calendar Button -->
+    <script type="text/javascript" src="https://cdn.addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
+    
     <title>Piratage AUC</title>
   </head>
 
