chore: Update favicon reference to favicon.ico

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
     <!-- Favicon with performance attributes -->
-    <link rel="icon" href="/piratagelogo.webp" sizes="any" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     
     <title>Piratage AUC</title>
   </head>
