--- a/email-template-event.html
+++ b/email-template-event.html
@@ -35,7 +35,7 @@
                             <table cellpadding="0" cellspacing="0" border="0">
                                 <tr>
                                     <td align="center" style="width: 100px; height: 100px; background: #07070a; border: 2px solid #a855f7; border-radius: 50%; box-shadow: 0 0 25px rgba(168, 85, 247, 0.3); overflow: hidden;">
-                                        <img src="https://piratageauc.vercel.app/piratagelogo.webp" alt="Piratage Logo" width="100" height="100" style="display: block; border-radius: 50%; object-fit: cover;" />
+                                        <img src="{{logo_url}}" alt="Piratage Logo" width="100" height="100" style="display: block; border-radius: 50%; object-fit: cover;" />
                                     </td>
                                 </tr>
                             </table>
