--- a/EVENT_EMAIL_TEMPLATE.html
+++ b/EVENT_EMAIL_TEMPLATE.html
@@ -64,7 +64,7 @@
                             <!-- Call to Action Buttons -->
                             <div style="margin: 35px 0; text-align: center;">
                                 <!-- Save My Spot Button -->
-                                <a href="https://piratageauc.vercel.app/#events" style="display: inline-block; background: linear-gradient(135deg, #8a2be2 0%, #4b0082 100%); color: #ffffff; text-decoration: none; padding: 15px 40px; border-radius: 8px; font-weight: bold; font-size: 16px; margin-right: 15px; margin-bottom: 10px;">
+                                <a href="https://piratageauc.tech/#events" style="display: inline-block; background: linear-gradient(135deg, #8a2be2 0%, #4b0082 100%); color: #ffffff; text-decoration: none; padding: 15px 40px; border-radius: 8px; font-weight: bold; font-size: 16px; margin-right: 15px; margin-bottom: 10px;">
                                     ✨ Save My Spot
                                 </a>
 
@@ -93,7 +93,7 @@
                             </p>
                             <p style="margin: 0; color: #808080; font-size: 12px;">
                                 {{#unsubscribe_url}}<a href="{{unsubscribe_url}}" style="color: #8a2be2; text-decoration: none;">Unsubscribe</a>{{/unsubscribe_url}} | 
-                                <a href="https://piratageauc.vercel.app" style="color: #8a2be2; text-decoration: none;">Visit Website</a>
+                                <a href="https://piratageauc.tech" style="color: #8a2be2; text-decoration: none;">Visit Website</a>
                             </p>
                             <p style="margin: 10px 0 0 0; color: #606060; font-size: 11px;">
                                 © {{year}} Piratage - The Ethical Hacking Club
