--- a/email-template-welcome.html
+++ b/email-template-welcome.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Montserrat:wght@700&display=swap" rel="stylesheet">
-    <title>{{subject}}</title>
+    <title>Welcome to Piratage, {{to_name}}</title>
     <style>
         body, table, td, p, a {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif !important;
         }
         h1 { font-family: 'Montserrat', sans-serif !important; }
         @media screen and (max-width: 600px) {
-            .container { width: 100% !important; }
+        <title>Welcome to Piratage, {{ contact.FIRSTNAME | default: "Member" }}</title>
             .mobile-padding { padding-left: 20px !important; padding-right: 20px !important; }
             .button-stack { display: block !important; width: 100% !important; margin-bottom: 15px !important; text-align: center !important; }
         }
@@ -72,8 +72,9 @@
                             <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                 <tr>
                                     <td align="center">
-                                        <a href="{{app_url}}" class="button-stack" style="background: #a855f7; color: #ffffff; text-decoration: none; padding: 18px 35px; border-radius: 14px; font-weight: 600; font-size: 16px; display: inline-block; border-bottom: 4px solid #7e22ce; box-shadow: 0 10px 25px rgba(168, 85, 247, 0.3); margin: 5px;">Visit Website</a>
-                                        <a href="{{whatsapp_link}}" class="button-stack" style="background: transparent; color: #ffffff; text-decoration: none; padding: 16px 35px; border-radius: 14px; font-weight: 600; font-size: 16px; display: inline-block; border: 2px solid #334155; border-bottom: 3px solid #1c1c2b; margin: 5px;">Join WhatsApp</a>
+                                        <!-- Bulletproof Buttons -->
+                                        <a href="https://piratageauc.tech" style="background: #a855f7; color: #fff; text-decoration: none; padding: 16px 32px; border-radius: 8px; font-weight: bold; display: inline-block; margin: 8px 0;">Visit Website</a>
+                                        <a href="https://chat.whatsapp.com/HbpsxloTU0pKJ5pPAWzA3G" style="background: #25d366; color: #fff; text-decoration: none; padding: 16px 32px; border-radius: 8px; font-weight: bold; display: inline-block; margin: 8px 0;">Join WhatsApp</a>
                                     </td>
                                 </tr>
                             </table>
@@ -84,10 +85,10 @@
                         <td align="center" style="padding: 40px 20px; background-color: #0b0b12; border-top: 1px solid #1e1e2d; border-radius: 0 0 30px 30px;">
                             <table cellpadding="0" cellspacing="0" border="0" style="margin-bottom: 25px;">
                                 <tr>
-                                    <td style="padding: 0 12px;"><a href="{{linkedin_link}}"><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="22" alt="LinkedIn" style="filter: invert(100%); opacity: 0.6;" /></a></td>
-                                    <td style="padding: 0 12px;"><a href="{{instagram_link}}"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" width="22" alt="Instagram" style="filter: invert(100%); opacity: 0.6;" /></a></td>
-                                    <td style="padding: 0 12px;"><a href="{{discord_link}}"><img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" width="22" alt="Discord" style="filter: invert(100%); opacity: 0.6;" /></a></td>
-                                    <td style="padding: 0 12px;"><a href="{{whatsapp_link}}"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" width="22" alt="WhatsApp" style="filter: invert(100%); opacity: 0.6;" /></a></td>
+                                    <td style="padding: 0 12px;"><a href="https://www.linkedin.com/in/piratage-the-ethical-hacking-club-5a736a354/" style="color: #0a66c2; text-decoration: underline;">LinkedIn</a></td>
+                                    <td style="padding: 0 12px;"><a href="https://www.instagram.com/piratage_club_auc/" style="color: #e1306c; text-decoration: underline;">Instagram</a></td>
+                                    <td style="padding: 0 12px;"><a href="https://discord.gg/BYcgdwHPYu" style="color: #5865f2; text-decoration: underline;">Discord</a></td>
+                                    <td style="padding: 0 12px;"><a href="https://chat.whatsapp.com/HbpsxloTU0pKJ5pPAWzA3G" style="color: #25d366; text-decoration: underline;">WhatsApp</a></td>
                                 </tr>
                             </table>
                             <p style="margin: 0; font-size: 11px; color: #475569; line-height: 1.6;">
