event mailer: add Brevo send endpoints, subscribers preview, template fixes, and UI improvements

--- a/email-template-event.html
+++ b/email-template-event.html
@@ -55,8 +55,8 @@
                                             <tr>
                                                 <td style="padding: 25px;">
                                                     <table width="100%" style="color: #cbd5e1; font-size: 15px;">
-                                                        <tr><td style="padding: 10px 0; border-bottom: 1px solid #252535;"><span style="color: #a855f7; font-weight: 700;">DATE:</span> &nbsp; {{event_date}}</td></tr>
-                                                        <tr><td style="padding: 10px 0; border-bottom: 1px solid #252535;"><span style="color: #a855f7; font-weight: 700;">TIME:</span> &nbsp; {{event_time}}</td></tr>
+                                                        <tr><td style="padding: 10px 0; border-bottom: 1px solid #252535;"><span style="color: #a855f7; font-weight: 700;">DATE:</span> &nbsp; {{event_date_formatted}}</td></tr>
+                                                        <tr><td style="padding: 10px 0; border-bottom: 1px solid #252535;"><span style="color: #a855f7; font-weight: 700;">TIME:</span> &nbsp; {{event_time_formatted}}</td></tr>
                                                         <tr><td style="padding: 10px 0;"><span style="color: #a855f7; font-weight: 700;">LOCATION:</span> &nbsp; {{event_location}}</td></tr>
                                                     </table>
                                                 </td>
